[package]
name = "evolutionary-tree-calculation"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
gloo = "0.11.0"
ordered-float = "4.5.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
wasm-bindgen = "0.2.95"
web-sys = { version = "0.3.72", features = ["DataTransfer"] }
yew = { version = "0.21.0", features = ["csr"] }
